--- a/web/package.json
+++ b/web/package.json
@@ -30,7 +30,8 @@
     "@ngrx/store-devtools": "^9.2.0",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "adwp_ui": "../../adwp_ui/dist/page-components"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.0",
