--- a/web/package.json
+++ b/web/package.json
@@ -9,42 +9,42 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "bundle-report": "ng build --prod --stats-json && webpack-bundle-analyzer ./dist/stats.json"
+    "bundle-report": "ng build --prod --stats-json && webpack-bundle-analyzer ./dist/stats-es2015.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.1",
-    "@angular/cdk": "^11.0.0",
-    "@angular/common": "^11.0.1",
-    "@angular/compiler": "^11.0.1",
-    "@angular/core": "^11.0.1",
-    "@angular/forms": "^11.0.1",
-    "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "^11.0.1",
-    "@angular/platform-browser-dynamic": "^11.0.1",
-    "@angular/router": "^11.0.1",
-    "@ngrx/effects": "^10.0.1",
-    "@ngrx/entity": "^10.0.1",
-    "@ngrx/router-store": "^10.0.1",
-    "@ngrx/store": "^10.0.1",
-    "@ngrx/store-devtools": "^10.0.1",
+    "@angular/animations": "^10.0.1",
+    "@angular/cdk": "^10.0.0",
+    "@angular/common": "^10.0.1",
+    "@angular/compiler": "^10.0.1",
+    "@angular/core": "^10.0.1",
+    "@angular/forms": "^10.0.1",
+    "@angular/material": "^10.0.0",
+    "@angular/platform-browser": "^10.0.1",
+    "@angular/platform-browser-dynamic": "^10.0.1",
+    "@angular/router": "^10.0.1",
+    "@ngrx/effects": "^9.2.0",
+    "@ngrx/entity": "^9.2.0",
+    "@ngrx/router-store": "^9.2.0",
+    "@ngrx/store": "^9.2.0",
+    "@ngrx/store-devtools": "^9.2.0",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "^11.0.2",
-    "@angular/compiler-cli": "11.0.5",
-    "@angular/language-service": "11.0.5",
-    "@ngrx/schematics": "^10.0.1",
+    "@angular-devkit/build-angular": "~0.1002.0",
+    "@angular/cli": "^10.0.0",
+    "@angular/language-service": "10.2.3",
+    "@angular/compiler-cli": "10.2.3",
+    "@ngrx/schematics": "^10.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.0.13",
     "codelyzer": "^6.0.0",
     "eslint": "^7.2.0",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-spec-reporter": "~6.0.0",
     "karma": "~5.2.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
@@ -52,8 +52,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "sass": "^1.29.0",
-    "ts-node": "~9.1.1",
+    "node-sass": "^4.14.1",
+    "ts-node": "~9.0.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2",
     "webpack-bundle-analyzer": "^4.1.0"
